cleanup book-service and lib-service by splitting methods