@@ -1,13 +1,16 @@
 package org.nikitactr.libraryservice.service;
 
+import org.nikitactr.libraryservice.mapper.BookMapper;
 import org.nikitactr.libraryservice.model.Book;
 import org.nikitactr.libraryservice.model.BookLoan;
+import org.nikitactr.libraryservice.payload.reponse.BookResponse;
 import org.nikitactr.libraryservice.repository.BookLoanRepository;
 import org.nikitactr.libraryservice.repository.BookRepository;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class LibraryService {
@@ -15,9 +18,12 @@ public class LibraryService {
 
     private final BookRepository bookRepository;
 
-    public LibraryService(BookLoanRepository bookLoanRepository, BookRepository bookRepository) {
+    private final BookMapper bookMapper;
+
+    public LibraryService(BookLoanRepository bookLoanRepository, BookRepository bookRepository, BookMapper bookMapper) {
         this.bookLoanRepository = bookLoanRepository;
         this.bookRepository = bookRepository;
+        this.bookMapper = bookMapper;
     }
 
     public void addBookLoan(Long bookId) {
@@ -25,19 +31,18 @@ public class LibraryService {
         bookLoan.setBook(bookRepository.findById(bookId).orElseThrow(() -> new RuntimeException("Book not found")));
         bookLoan.setLoanTime(LocalDateTime.now());
         bookLoan.setReturnTime(LocalDateTime.now().plusHours(4));
-
         bookLoanRepository.save(bookLoan);
     }
 
-    public List<Book> findAvailableBooks() {
+    public List<BookResponse> findAvailableBooks() {
         List<Book> allBooks = bookRepository.findAll();
         List<BookLoan> borrowedBooks = bookLoanRepository.findAll();
-
-        List<Book> availableBooks = allBooks.stream()
+        bookMapper.booksToBookResponses(allBooks);
+        List<Book> filteredBooks = allBooks.stream()
                 .filter(book -> borrowedBooks.stream()
                         .noneMatch(loan -> loan.getBook().getId().equals(book.getId())))
-                .toList();
+                .collect(Collectors.toList());
 
-        return availableBooks;
+        return bookMapper.booksToBookResponses(filteredBooks);
     }
 }
